# craft

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  install.sh  justfile  next-plan.md
craft-acp/: Cargo.toml
craft-acp/src/: event_bridge.rs  fs_proxy.rs  lib.rs  mcp.rs  methods.rs  permissions.rs  plan.rs  prompt.rs  server.rs  session.rs  terminal_proxy.rs  tool_kinds.rs  translate.rs
craft-acp/tests/: fs_proxy_e2e.rs
craft-agent/: Cargo.toml
craft-agent/src/: cancel.rs  child_guard.rs  command.rs  discovery.rs  headless.rs  hooks.rs  lib.rs  permissions.rs  prompt.rs  recipe.rs  task_set.rs  template.rs  types.rs
craft-agent/src/agent/: cache.rs  compaction.rs  compression_store.rs  dedup.rs  doom.rs  embed_types.rs  escalation.rs  findings_store.rs  format.rs  guardrails.rs  history.rs  instructions.rs  judge.rs  mod.rs  read_lifecycle.rs  retrieve.rs  run.rs  semantic.rs  snapshot.rs  streaming.rs  tool_dispatch.rs  trust.rs  validation.rs
craft-agent/src/checks/: mod.rs  orchestrator.rs
craft-agent/src/compression/: code.rs  diff_comp.rs  json.rs  keywords.rs  log.rs  mod.rs  search.rs
craft-agent/src/mcp/: config.rs  http.rs  mod.rs  protocol.rs  stdio.rs
craft-agent/src/mcp/oauth/: callback.rs  mod.rs  registration.rs  token.rs
craft-agent/src/prompts/: checkpoint.md  compaction_targeted_user.md  distill.md  dream.md  plan.md  research.md  reviewer.md  system.md  system_small.md
craft-agent/src/styleguide/: mod.rs
craft-agent/src/tools/: apply_patch.md  apply_patch.rs  astgrep.md  astgrep.rs  batch.rs  callgraph.md  callgraph.rs  code_execution.rs  conflicts.md  conflicts.rs  delete.md  delete.rs  dynamic.rs  edit.md  edit.rs  fs_backend.rs  fuzzy_replace.rs  grep.md  grep.rs  inspect.md  inspect.rs  list_tools.md  list_tools.rs  mod.rs  move_file.md  move_file.rs  multiedit.rs  outline.md  outline.rs  read.md  read.rs  read_findings.rs  registry.rs  report_finding.rs  review.rs  safety.md  safety.rs  schema.rs  styleguide.rs  task.rs  (+6 more)
craft-agent/styleguides/general/: abstraction.yaml  comments.yaml  const_usage.yaml  control_flow.yaml  error_handling.yaml  functional_patterns.yaml  memory_management.yaml  naming.yaml  optimization.yaml  organization.yaml  static_analysis.yaml
craft-agent/styleguides/rust/: attributes.yaml  comments.yaml  control_flow.yaml  error_handling.yaml  formatting.yaml  functional.yaml  memory.yaml  naming.yaml  optimization.yaml  organization.yaml  ownership.yaml  practices.yaml
craft-config/: Cargo.toml
craft-config-macro/: Cargo.toml
craft-config/src/: lib.rs  providers.rs
craft-docgen/: Cargo.toml
craft-docgen/src/: gen_commands.rs  gen_config.rs  gen_keybindings.rs  gen_providers.rs  gen_tools.rs  lua_util.rs  main.rs
craft-highlight/: Cargo.toml
craft-interpreter/: Cargo.toml
craft-lua/: Cargo.toml
craft-lua/src/: language.rs  lib.rs  loader.rs  plugin_permissions.rs  runtime.rs  terminal_backend.rs
craft-lua/src/api/: AGENTS.md  async_api.rs  autocmd.rs  buf.rs  command.rs  ctx.rs  embed.rs  env.rs  fn_api.rs  fs.rs  hooks.rs  json.rs  keymap.rs  mod.rs  net.rs  setup.rs  text.rs  tool.rs  ui.rs  uv.rs  win.rs
craft-lua/src/api/treesitter/: language.rs  language_tree.rs  mod.rs  query.rs
craft-lua/tests/: plugin_host.rs  spec.rs  treesitter_compat.rs
craft-markdown/: Cargo.toml
craft-markdown/src/: lib.rs  render.rs
craft-providers/: Cargo.toml
craft-providers/src/: error.rs  lib.rs  model.rs  model_registry.rs  provider.rs  tier_map.rs  types.rs
craft-providers/src/providers/: custom.rs  deepseek.rs  dynamic.rs  google.rs  llama_cpp.rs  local.rs  mistral.rs  mod.rs  ollama.rs  openai_compat.rs  openrouter.rs  synthetic.rs  zai.rs
craft-providers/src/providers/anthropic/: bedrock.rs  mod.rs  shared.rs
craft-providers/src/providers/copilot/: auth.rs  mod.rs
craft-providers/src/providers/openai/: auth.rs  mod.rs  platform.rs  responses.rs
craft-sandbox/: Cargo.toml
craft-storage/: Cargo.toml
craft-tool-macro/: Cargo.toml
craft-ui/: Cargo.toml
craft-ui/benches/: splash.rs
craft-ui/src/: animation.rs  chat.rs  event_loop.rs  highlight.rs  image.rs  lib.rs  markdown.rs  mock.rs  render_worker.rs  selection.rs  splash.rs  storage_writer.rs  terminal.rs  text_buffer.rs  theme.rs  update.rs
craft-ui/src/agent/: agent_loop.rs  cancel_map.rs  command_router.rs  mod.rs  shared_queue.rs
craft-ui/src/app/: btw.rs  image_paste.rs  mod.rs  mode.rs  mouse.rs  queue.rs  session.rs  session_state.rs  shell.rs  tests.rs  view.rs
craft-ui/src/components/: code_view.rs  command.rs  file_picker.rs  form.rs  input.rs  keybindings.rs  list_picker.rs  login_picker.rs  lua_float.rs  mcp_picker.rs  mod.rs  model_picker.rs  permission_prompt.rs  render_hints.rs  rewind_picker.rs  search_modal.rs  session_picker.rs  split_layout.rs  status_bar.rs  streaming_content.rs  todo_panel.rs  tool_display.rs
craft-ui/src/components/messages/: mod.rs  segment.rs  selection.rs  tests.rs
craft-ui/src/themes/: ayu_dark.toml  carbonfox.toml  catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  dracula.toml  everforest_dark.toml  fleet_dark.toml  github_dark.toml  gruvbox.toml  gruvbox_light.toml  kanagawa.toml  material_darker.toml  monokai_pro.toml  night_owl.toml  nightfox.toml  nord.toml  onedark.toml  rose_pine.toml  solarized_dark.toml  solarized_light.toml  tokyonight.toml  vscode_dark_plus.toml  zenburn.toml
docs/: how-to-apply-patches.md  migration-architecture.md  migration-plan.md  porting-from-maki.md
maki-agent/: Cargo.toml
maki-docgen/: Cargo.toml
maki-lua/: Cargo.toml
maki-providers/: Cargo.toml
maki-providers/src/: error.rs  provider.rs
maki-providers/src/providers/: dynamic.rs  mod.rs  openai_compat.rs
maki-providers/src/providers/anthropic/: bedrock.rs  mod.rs
maki-providers/src/providers/copilot/: mod.rs
maki-providers/src/providers/openai/: auth.rs  platform.rs  responses.rs
maki-storage/: Cargo.toml
maki-ui/: Cargo.toml
scripts/: collect.py  compare.py  (+2 more)
src/: cli.rs  (+5 more)
(+160 files in other folders)
