[package]
name = "craft"
version.workspace = true
edition = "2024"
authors = ["Tony Solomonik <tony.solomonik@gmail.com>"]
description = "AI coding agent. Native Rust TUI. Immediate startup, 60 FPS, low memory."
license = "MIT"
repository = "https://gitlab.com/craft-build/craft"
readme = "README.md"
keywords = ["ai", "agent", "cli", "tui", "coding"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "craft"
path = "src/main.rs"

[features]
demo = ["craft-ui/demo"]

[dependencies]
craft-ui = { workspace = true }
craft-agent = { workspace = true }
craft-config = { workspace = true }
craft-providers = { workspace = true }
craft-storage = { workspace = true }
craft-lua = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }

[workspace]
members = [
  "craft-agent",
  "craft-config",
  "craft-docgen",
  "craft-highlight",
  "craft-interpreter",
  "craft-lua",
  "craft-markdown",
  "craft-providers",
  "craft-storage",
  "craft-tool-macro",
  "craft-config-macro",
  "craft-ui",
]
resolver = "3"

[workspace.package]
version = "0.3.14+0.2.3"
edition = "2024"
authors = ["Tony Solomonik <tony.solomonik@gmail.com>", "Jarrett Tierney <akarifur@pm.me>"]
license = "MIT"
repository = "https://gitlab.com/craft-build/craft"
rust-version = "1.85"

[workspace.dependencies]
craft-agent = { path = "craft-agent" }
craft-config = { path = "craft-config" }
craft-interpreter = { path = "craft-interpreter" }
craft-providers = { path = "craft-providers" }
craft-storage = { path = "craft-storage" }
craft-ui = { path = "craft-ui" }
craft-lua = { path = "craft-lua" }
craft-tool-macro = { path = "craft-tool-macro" }
craft-config-macro = { path = "craft-config-macro" }
craft-highlight = { path = "craft-highlight" }
craft-markdown = { path = "craft-markdown" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
uuid = { version = "1", default-features = false, features = ["v4"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["osc52"] }
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
sha2 = { version = "0.11", default-features = false }
hmac = { version = "0.13", default-features = false }
base64 = "0.22"
getrandom = "0.4"
fastrand = "2"
test-case = "3"
ignore = "0.4"
memchr = "2"
strum = { version = "0.28", features = ["derive"] }
htmd = "0.5"
tempfile = "3"
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl"] }
grep-regex = "0.1"
grep-searcher = "0.1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-default-fancy"] }
unicode-width = "0.2"
similar = { version = "3", features = ["inline", "unicode"] }
jiff = { version = "0.2", default-features = false, features = ["std"] }
arboard = { version = "3", default-features = false, features = ["image-data", "wayland-data-control"] }
image = { version = "0.25", default-features = false, features = ["png"] }
flume = { version = "0.12", default-features = false, features = ["async"] }
humantime = "2"
toml = "1"
toml_edit = "0.25"
arc-swap = "1"
bitflags = "2"
event-listener = "5"
libc = "0.2"
nucleo = "0.5"
nucleo-matcher = "0.3"
open = "5"
criterion = { version = "0.8", features = ["html_reports"] }
etcetera = "0.11"
dotenvy = "0.15"
tree-sitter = "0.26"
include_dir = "0.7"
mlua = { version = "0.11", features = ["luau", "async", "send", "serde", "macros"] }
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-gleam = "1.0"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-lua = "0.5"
tree-sitter-md = "0.5"
tree-sitter-php = "0.24"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-starlark = "1.3"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-zig = "1.1"
monty = { git = "https://github.com/pydantic/monty.git", tag = "v0.0.17", package = "monty" }
notify = { version = "9.0.0-rc.4", default-features = false, features = ["flume", "macos_fsevent"] }
serde_yaml = "0.9"
once_cell = "1"
shell-words = "1"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
reqwest = { version = "0.13", default-features = false, features = [
  "charset", "http2", "stream", "rustls"
] }
futures = "0.3"

wait-timeout = "0.2"

[profile.bench]
debug = true
