[package]
name = "craft-acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Agent Client Protocol (ACP) transport for the craft AI coding agent"

[dependencies]
craft-providers = { workspace = true }
craft-agent = { workspace = true }
craft-config = { workspace = true }
craft-lua = { workspace = true }
craft-storage = { workspace = true }
agent-client-protocol = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
