[package]
name = "craft-acp"
version.workspace = true
edition.workspace = true

[dependencies]
craft-agent = { workspace = true }
craft-config = { workspace = true }
craft-providers = { workspace = true }
craft-storage = { workspace = true }
agent-client-protocol-schema = { workspace = true }
flume = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
