[package]
name = "craft-agent"
version.workspace = true
edition.workspace = true

[dependencies]
craft-providers = { workspace = true }
craft-config = { workspace = true }
craft-interpreter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
strum = { workspace = true }
craft-tool-macro = { workspace = true }
craft-storage = { workspace = true }
regex = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
similar = { workspace = true }
jiff = { workspace = true }
humantime = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
flume = { workspace = true }
arc-swap = { workspace = true }
bitflags = { workspace = true }
event-listener = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
libc = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }

