[package]
name = "craft-agent"
version.workspace = true
edition.workspace = true

[dependencies]
craft-providers = { workspace = true }
craft-config = { workspace = true }
craft-interpreter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
strum = { workspace = true }
craft-tool-macro = { workspace = true }
craft-storage = { workspace = true }
jsonrepair = { workspace = true }
regex = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
similar = { workspace = true }
jiff = { workspace = true }
humantime = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
arc-swap = { workspace = true }
bitflags = { workspace = true }
event-listener = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
libc = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
include_dir = { workspace = true }
minijinja = { workspace = true }
aho-corasick = { workspace = true }
unicode-normalization = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-elixir = { workspace = true }
tree-sitter-scala = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-gleam = { workspace = true }
tree-sitter-dart = { workspace = true }
tree-sitter-starlark = { workspace = true }
tree-sitter-nix = { workspace = true }
tree-sitter-zig = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-fish = { workspace = true }
tree-sitter-gdscript = { workspace = true }
tree-sitter-gdshader = { workspace = true }
tree-sitter-godot-resource = { workspace = true }
tree-sitter-objc = { workspace = true }
tree-sitter-perl = { workspace = true }
tree-sitter-svelte-next = { workspace = true }
tree-sitter-zsh = { workspace = true }
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"], optional = true }
magika = { version = "1", optional = true }
ast-grep-core = { workspace = true }
ast-grep-language = { workspace = true, features = ["tree-sitter-rust", "tree-sitter-typescript", "tree-sitter-python", "tree-sitter-go"] }

[features]
default = []
onnx = ["dep:fastembed", "dep:magika"]

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
rstest = "0.26.1"
