[package]
name = "craft-config"
version.workspace = true
edition.workspace = true

[dependencies]
craft-config-macro = { workspace = true }
craft-storage = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
