[package]
name = "craft-docgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "craft-docgen"
path = "src/main.rs"

[dependencies]
craft-agent = { workspace = true }
craft-config = { workspace = true }
craft-providers = { workspace = true }
craft-ui = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true }
