[package]
name = "craft-ui"
version.workspace = true
edition.workspace = true

[dependencies]
craft-agent = { workspace = true }
craft-config = { workspace = true }
craft-highlight = { workspace = true }
craft-markdown = { workspace = true }
craft-providers = { workspace = true }
craft-lua = { workspace = true }
craft-storage = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
syntect = { workspace = true }
unicode-width = { workspace = true }
serde_json = { workspace = true }
arboard = { workspace = true }
jiff = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
arc-swap = { workspace = true }
getrandom = { workspace = true }

image = { workspace = true }
base64 = { workspace = true }
nucleo = { workspace = true }
nucleo-matcher = { workspace = true }
ignore = { workspace = true }

libc = { workspace = true }
strum = { workspace = true }
notify = { workspace = true }
tempfile = { workspace = true }
shell-words = { workspace = true }

[features]
demo = []

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "splash"
harness = false
