[package]
name = "maki-providers"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
maki-storage = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
flume = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
wait-timeout = { workspace = true }
fastrand = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
